country operation dropdown gap fix

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -992,7 +992,7 @@
 }
 
 .inputField-margin {
-  margin-bottom: -10px;
+  // margin-bottom: px;
   margin-top: 21px;
 }
 
@@ -1254,7 +1254,7 @@ input.mdc-radio__native-control:focus,
       border-radius: 3px !important;
       //border: 1px solid var.$blue-light-200 !important;
       height: $height !important;
-      align-items: center;
+      // align-items: center;
     }
 
     .mat-mdc-select-arrow svg {
@@ -1277,7 +1277,7 @@ input.mdc-radio__native-control:focus,
       //border: 1px solid var.$blue-light-200 !important;
       min-width: $width;
       height: $height !important;
-      align-items: center;
+      // align-items: center;
     }
 
     .mat-mdc-select-arrow svg {
